package org.example.abstractFactory;

public abstract class GUIButton {
    public abstract void click() ;
}
