package org.example.abstractFactory;

public enum OSType {
    Windows,
    OSX
}
