package org.example.abstractFactory;

public class OSXButton extends GUIButton{

    public void click() {
        System.out.println("clicked me: OSXButton");
    }

}
