package org.example.abstractFactory;

public class WindowsButton extends GUIButton{

     public void click() {
        System.out.println("clicked me: windows button");
    }
}
